added some services content

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -68,19 +68,19 @@
                     <a href="#" class="main-a">Services</a>
                     <ul class="services-list">
                       <li>
-                        <a href="./pages/websitedev.html"
+                        <a href="./websitedev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Website Development</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/digitalmarket.html"
+                        <a href="./digitalmarket.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Digital Marketing</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/erppage.html"
+                        <a href="./erppage.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">ERP Solutions</span></a
                         >
