--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -192,7 +192,7 @@
                 alt=""
               />
               <div class="lower-content">
-                <h3>Software Development</h3>
+                <h3>Welcome to Cutting-Edge Web Development with MERN Stack at Scipy Technologies</h3>
                 <p>
                   We provide expert and unique Software Development Service for
                   the needs that are specifically fro industrial trens and
