--- a/pages/websitedev.html
+++ b/pages/websitedev.html
@@ -122,7 +122,7 @@
                     <a href="../index.html" class=".main-a">Technologies</a>
                   </li>
                   <li><a href="./careers.html" class=".main-a">Careers</a></li>
-                  
+
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -145,7 +145,12 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div
+          class="about-home"
+          style="
+            background: url('https://images.pexels.com/photos/5926373/pexels-photo-5926373.jpeg?auto=compress&cs=tinysrgb&w=1600');
+          "
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -186,64 +191,119 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/projects/project-1.jpg"
+                src="https://cdn-eahjn.nitrocdn.com/ChEvwayTHZmZJUAdsUNMLXuXZdBprFoQ/assets/images/optimized/rev-21ec0b7/www.spinxdigital.com/app/uploads/2022/10/Best-Website-Designs_1.1.jpg"
                 alt=""
               />
               <div class="lower-content">
-                <h3>Website Development</h3>
+                <h3>
+                  Welcome to Cutting-Edge Web Development with MERN Stack at
+                  SciPy Technologies
+                </h3>
                 <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interactive web and mobile solution We are effective in
-                  next generation enterprise application on the web, Mobile and
-                  desktop to modernized business process and enhance customers
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the
-                  market.
+                  At SciPy Technologies, we're dedicated to bringing your
+                  digital dreams to life through the power of web development.
+                  We understand that the heart of a thriving online presence is
+                  a robust, scalable, and engaging website. That's where the
+                  MERN Stack comes into play - a game-changer in the world of
+                  web development.
                 </p>
-                <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenges in
-                  business. We provide you a
-                  secure,interactive,responsive,elegant,sleek and fully
-                  customized UI/UX. Identify the core needs of your business and
-                  develop an app that directly, immediately and throughly meets
-                  that need. We focus on cross platform development and
-                  customized design for IOS & Andriod. Enable smart and seamless
-                  system integration, We build open source content management
-                  system that are designed for customization and integration.
+                <h6>What is MERN Stack ?</h6>
+                <p style="text-align: justify; line-height: 1.5rem">
+                  MERN stands for MongoDB, Express, React, and Node.js - a
+                  powerful combination of technologies that enables developers
+                  to create dynamic and interactive web applications. Let's
+                  break down the core components: <br /><br />
+                  <b> - MongoDB :</b> A highly flexible and scalable NoSQL
+                  database that stores data in a JSON-like format, making it
+                  ideal for handling complex data structures. <br /><br />
+                  <b> - Express :</b> A robust and efficient Node.js web
+                  application framework that simplifies the process of building
+                  APIs and handling HTTP requests. <br /><br />
+                  <b> - REACT :</b> A JavaScript library for building user
+                  interfaces that is renowned for its speed, modularity, and
+                  reusability. React allows for the creation of dynamic and
+                  interactive front-end interfaces. <br /><br />
+                  <b> - Node.js :</b> A server-side runtime environment that
+                  utilizes JavaScript, providing excellent performance and
+                  scalability for web applications.
                 </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
-                <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
+                <h6>Why MERN Stack?</h6>
+                <p style="line-height: 1.5rem; text-align: justify">
+                  The MERN Stack is a popular choice for web development for
+                  several compelling reasons: <br />
+                  <br />
+                  <b>1. Full-stack JavaScript :</b> With MERN, you can use
+                  JavaScript throughout the entire application, from the
+                  front-end to the back-end. This unified language simplifies
+                  development and fosters seamless communication between
+                  different parts of the application. <br /><br />
+                  <b>2. Speed and Performance : </b> React, combined with the
+                  event-driven, non-blocking architecture of Node.js, results in
+                  lightning-fast web applications that provide a superior user
+                  experience. <br /><br />
+                  <b>3. Scalability :</b> Whether your project is small or
+                  large, the MERN Stack is well-equipped to scale with your
+                  needs. MongoDB's flexible schema and Express.js' RESTful API
+                  creation make it easy to accommodate future growth.
+                  <br /><br />
+                  <b>4. Community and Support :</b> MERN Stack enjoys a vast and
+                  active developer community. This means a wealth of resources,
+                  libraries, and third-party packages, making development faster
+                  and more efficient. <br /><br />
+                  <b>5. Cross-Platform :</b> MERN Stack applications can be
+                  easily deployed on a variety of platforms, including web,
+                  mobile, and desktop.
+                </p>
+                <h6>
+                  Our Expertise in MERN Stack Development At SciPy Technologies,
+                </h6>
+                <p style="line-height: 1.5rem; text-align: justify">
+                  We are passionate about MERN Stack development. Our team of
+                  skilled developers has extensive experience in creating
+                  cutting-edge web applications using this technology stack.
+                  Whether you need a simple, elegant website or a complex,
+                  feature-rich web application, we've got you covered. <br>
+                  <b>Our MERN Stack development services include:</b>
+                  <br /><br />
+                  - <b>Custom Web Application Development :</b> We tailor web
+                  applications to your specific requirements, ensuring they're
+                  efficient, user-friendly, and scalable. <br /><br />
+                  - <b>E-commerce Solutions :</b> We create online stores that
+                  are both visually stunning and fully functional, providing a
+                  seamless shopping experience for your customers. <br /><br />
+                  - <b>Content Management Systems :</b> Our MERN-based CMS
+                  solutions give you full control over your website's content,
+                  allowing you to manage and update it with ease. <br /><br />
+                  - <b>Real-time Applications :</b> We specialize in real-time
+                  applications like chat applications and collaboration tools,
+                  leveraging the power of WebSockets and React. <br /><br />
+                  - <b>MERN Stack Consulting :</b> If you're looking for
+                  guidance on how to best utilize MERN Stack for your project,
+                  we're here to help you make informed decisions. <br />
                 </p>
                 <div class="lower-content-row">
-                  <div class="lower-content-col">
-                    <img
+                  <div class="lower-content-col webdevimage2">
+                    <!-- <img
                       class="lower-content-img"
-                      src="../assets/projects/project-2.jpg"
+                      src="../assets/projects/webdev_image.jpg"
                       alt=""
-                    />
+                    /> -->
                   </div>
                   <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
-                    <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
+                    <h6>Get In Touch</h6>
+                    <p style="text-align: justify; line-height: 1.5rem">
+                      Ready to embark on a journey of innovation and growth with
+                      MERN Stack web development? Contact [Your IT Company]
+                      today! We'd be delighted to discuss your project,
+                      understand your vision, and provide a tailored solution
+                      that exceeds your expectations. <br /><br />Let's build
+                      the future together, one line of code at a time.
                     </p>
-                    <ul class="service-list-content">
+                    <!-- <ul class="service-list-content">
                       <li>One-time security check fee: $99.95</li>
                       <li>One-time security check fee: $99.95</li>
                       <li>One-time security check fee: $99.95</li>
-                    </ul>
+                    </ul> -->
                   </div>
                 </div>
               </div>
@@ -427,9 +487,7 @@
               >
             </li>
             <li>
-              <a href="./erppage.html" data-page="Service1"
-                >ERP Solutions</a
-              >
+              <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
             <li>
               <a
@@ -444,7 +502,7 @@
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
-        
+
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
