--- a/pages/digitalmarket.html
+++ b/pages/digitalmarket.html
@@ -145,7 +145,7 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div class="about-home" style="background: url('https://images.pexels.com/photos/6483582/pexels-photo-6483582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); background-size: 90% cover !important; background-position: center center !important;">
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -186,7 +186,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/projects/project-1.jpg"
+                src="https://images.pexels.com/photos/6476589/pexels-photo-6476589.jpeg?auto=compress&cs=tinysrgb&w=1600"
                 alt=""
               />
               <div class="lower-content">
