--- a/pages/erppage.html
+++ b/pages/erppage.html
@@ -147,7 +147,12 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div
+          class="about-home"
+          style="
+            background: url('https://images.unsplash.com/photo-1555949963-ff9fe0c870eb?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+          "
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -188,58 +193,107 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/projects/project-1.jpg"
+                src="https://img.freepik.com/free-vector/erp-enterprise-resource-planning-isometric-landing-page_107791-5191.jpg?w=1380&t=st=1698773304~exp=1698773904~hmac=1882bba4b4e90b97d0d72acaf9cdedb6d2621050f72f41917e2882ba5be195de"
                 alt=""
               />
               <div class="lower-content">
-                <h3>ERP Solutions</h3>
-                <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interactive web and mobile solution We are effective in
-                  next generation enterprise application on the web, Mobile and
-                  desktop to modernized business process and enhance customers
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the
-                  market.
+                <h3>
+                  Revolutionize Your Business with ERP Solutions at SciPy
+                  Technologies
+                </h3>
+                <p style="text-align: justify; line-height: 1.6rem">
+                  At SciPy Technologies, we understand that businesses need more
+                  than just websites; they need a cohesive and efficient system
+                  that can seamlessly manage every aspect of their operations.
+                  This is where Enterprise Resource Planning (ERP) solutions
+                  come into play. Let us introduce you to the world of ERP
+                  solutions and how they can transform your business.
+                  <br /><br />
+
+                  <b>What is an ERP Solution?</b>
+                  <br /><br />
+
+                  An ERP solution is a comprehensive software system that
+                  integrates and manages various business processes, such as
+                  accounting, human resources, inventory management, sales, and
+                  more, into a single, unified platform. This integration allows
+                  for real-time data sharing and provides a holistic view of
+                  your business, leading to better decision-making, increased
+                  efficiency, and improved overall performance.
+                  <br /><br />
+                  <b>Why Choose ERP?</b>
+                  <br /><br />
+
+                  Choosing an ERP solution for your business offers numerous
+                  advantages: <br /><br />
+
+                  <b>1. Streamlined Operations :</b> ERP systems enable the
+                  automation and optimization of business processes, reducing
+                  manual efforts and minimizing errors. <br /><br />
+
+                  <b>2. Data Integration :</b> All your data is stored in one
+                  centralized database, providing a 360-degree view of your
+                  business in real-time. <br /><br />
+
+                  <b>3. Enhanced Productivity :</b> With a reduction in
+                  repetitive tasks and access to accurate, up-to-date
+                  information, your team can focus on more value-added
+                  activities. <br /><br />
+
+                  <b>4. Improved Decision-Making :</b> ERP systems provide
+                  in-depth analytics and reporting, helping you make data-driven
+                  decisions that can boost your bottom line. <br /><br />
+
+                  <b>5. Cost Savings :</b> By streamlining operations and
+                  reducing inefficiencies, ERP solutions can help cut
+                  operational costs. <br /><br />
+
+                  <b>6. Scalability :</b> ERP systems can grow with your
+                  business, making them a long-term investment.
                 </p>
-                <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenges in
-                  business. We provide you a
-                  secure,interactive,responsive,elegant,sleek and fully
-                  customized UI/UX. Identify the core needs of your business and
-                  develop an app that directly, immediately and throughly meets
-                  that need. We focus on cross platform development and
-                  customized design for IOS & Andriod. Enable smart and seamless
-                  system integration, We build open source content management
-                  system that are designed for customization and integration.
-                </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
-                <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
+
+                <h6>Our Expertise in ERP Solutions.</h6>
+                <p style="text-align: justify; line-height: 1.8rem">
+                  At SciPy Technologies, we are committed to delivering tailored
+                  ERP solutions that meet the unique needs of your business. Our
+                  team of experienced ERP consultants and developers can help
+                  you with:
+                  <br /><br />
+
+                  <b>- ERP Implementation :</b> We assist in selecting,
+                  customizing, and implementing the right ERP software for your
+                  business. <br /><br /><b>- Custom ERP Development :</b> For
+                  businesses with unique requirements, we develop customized ERP
+                  solutions that align perfectly with your operations.
+                  <br /><br />
+                  <b>- Integration:</b> We ensure your ERP system seamlessly
+                  integrates with your existing software, avoiding disruptions
+                  in your workflow. <br /><br />
+                  <b>- Training and Support :</b> Our team provides
+                  comprehensive training and ongoing support to ensure that you
+                  and your employees can maximize the benefits of your ERP
+                  system. <br /><br />
+                  <b>- ERP Upgrades and Maintenance:</b> We keep your ERP system
+                  up to date and ensure it continues to run smoothly.
+                  <br /><br />
                 </p>
                 <div class="lower-content-row">
                   <div class="lower-content-col">
-                    <img
+                    <img style="border-radius: 20px;"
                       class="lower-content-img"
-                      src="../assets/projects/project-2.jpg"
+                      src="https://img.freepik.com/free-vector/gradient-erp-illustration_23-2149379179.jpg?w=826&t=st=1698773343~exp=1698773943~hmac=5895ad34432fd3bba2e794ad6a1f12cfd02f689dd22ffa407afc3f89e39cf7a5"
                       alt=""
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
-                    <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
+                    <h6>Get In Touch</h6>
+                    <p style="text-align: justify">
+                      Ready to take your business to the next level with an ERP
+                      solution? Contact SciPy Technologies today, and let's
+                      discuss how we can transform your business processes,
+                      increase efficiency, and drive growth with a tailor-made
+                      ERP solution. Your success is our priority, and we're here
+                      to help you achieve it.
                     </p>
                     <ul class="service-list-content">
                       <li>One-time security check fee: $99.95</li>
