added images for some servies paage

--- a/pages/AdvancedTech.html
+++ b/pages/AdvancedTech.html
@@ -71,19 +71,19 @@
                     >
                     <ul class="services-list">
                       <li>
-                        <a href="./pages/websitedev.html"
+                        <a href="./websitedev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Website Development</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/digitalmarket.html"
+                        <a href="./digitalmarket.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Digital Marketing</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/erppage.html"
+                        <a href="./erppage.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">ERP Solutions</span></a
                         >
@@ -145,7 +145,7 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div class="about-home" style="background: url('../assets/projects/advancedtech.jpg');">
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -186,7 +186,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/projects/project-1.jpg"
+                src="https://img.freepik.com/free-photo/people-generating-images-using-artificial-intelligence-laptop_23-2150794313.jpg?size=626&ext=jpg&uid=R75365823&ga=GA1.1.1388913245.1697904651&semt=ais"
                 alt=""
               />
               <div class="lower-content">
@@ -221,8 +221,8 @@
                 <div class="lower-content-row">
                   <div class="lower-content-col">
                     <img
-                      class="lower-content-img"
-                      src="../assets/projects/project-2.jpg"
+                      class="lower-content-img" style="border-radius: 20px;"
+                      src="https://img.freepik.com/free-vector/virtual-reality-friends-cartoons_18591-52210.jpg?size=626&ext=jpg&uid=R75365823&ga=GA1.1.1388913245.1697904651&semt=ais"
                       alt=""
                     />
                   </div>
