--- a/pages/digitalmarket.html
+++ b/pages/digitalmarket.html
@@ -145,7 +145,7 @@
             </nav>
           </div>
         </header>
-        <div class="about-home" style="background: url('https://images.pexels.com/photos/6483582/pexels-photo-6483582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); background-size: 90% cover !important; background-position: center center !important;">
+        <div class="about-home" style="background: url('https://img.freepik.com/free-photo/medium-shot-woman-influencer-marketing_23-2150521899.jpg?w=1380&t=st=1698824367~exp=1698824967~hmac=91a765fc04c54143945a24b97bab55a87452700a2bd3b0067fd7cc5d6e877753'); background-size: 90% cover !important; background-position: center top !important;">
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
