--- a/pages/erppage.html
+++ b/pages/erppage.html
@@ -279,7 +279,8 @@
                 </p>
                 <div class="lower-content-row">
                   <div class="lower-content-col">
-                    <img style="border-radius: 20px;"
+                    <img
+                      style="border-radius: 20px"
                       class="lower-content-img"
                       src="https://img.freepik.com/free-vector/gradient-erp-illustration_23-2149379179.jpg?w=826&t=st=1698773343~exp=1698773943~hmac=5895ad34432fd3bba2e794ad6a1f12cfd02f689dd22ffa407afc3f89e39cf7a5"
                       alt=""
@@ -295,11 +296,6 @@
                       ERP solution. Your success is our priority, and we're here
                       to help you achieve it.
                     </p>
-                    <ul class="service-list-content">
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                    </ul>
                   </div>
                 </div>
               </div>
