--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -71,19 +71,19 @@
                     >
                     <ul class="services-list" style="color: #1d2c38">
                       <li>
-                        <a href="./pages/websitedev.html"
+                        <a href="./websitedev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Website Development</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/digitalmarket.html"
+                        <a href="./digitalmarket.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Digital Marketing</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/erppage.html"
+                        <a href="./erppage.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">ERP Solutions</span></a
                         >
@@ -147,7 +147,13 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div
+          class="about-home"
+          style="
+            background: url('https://img.freepik.com/free-vector/creative-web-homepage-illustration_52683-79847.jpg?w=1380&t=st=1698820936~exp=1698821536~hmac=f291b81b97089c683d5a506110c922c985ad2c6122a2dfbccc8ab503f41667cb');
+            background-size: cover;
+          "
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -188,64 +194,148 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/projects/project-1.jpg"
+                src="https://img.freepik.com/free-vector/web-development-isometric-concept-composition-illustration_1284-55922.jpg?size=626&ext=jpg&uid=R75365823&ga=GA1.1.1388913245.1697904651&semt=ais"
                 alt=""
               />
               <div class="lower-content">
-                <h3>Welcome to Cutting-Edge Web Development with MERN Stack at Scipy Technologies</h3>
+                <h3>
+                  Elevate Your Business with Innovative Software Development at
+                  SciPy Technologies
+                </h3>
                 <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interactive web and mobile solution We are effective in
-                  next generation enterprise application on the web, Mobile and
-                  desktop to modernized business process and enhance customers
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the
-                  market.
+                  At SciPy Technologies, we believe that software is the
+                  backbone of modern businesses. It's the driving force behind
+                  productivity, innovation, and customer engagement. That's why
+                  we're here to offer you exceptional software development
+                  services that can transform your ideas into reality.
+                  <br /><br />
                 </p>
+                <h6>Why Choose Software Development?</h6>
                 <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenges in
-                  business. We provide you a
-                  secure,interactive,responsive,elegant,sleek and fully
-                  customized UI/UX. Identify the core needs of your business and
-                  develop an app that directly, immediately and throughly meets
-                  that need. We focus on cross platform development and
-                  customized design for IOS & Andriod. Enable smart and seamless
-                  system integration, We build open source content management
-                  system that are designed for customization and integration.
+                  In today's digital age, software development is not merely an
+                  option; it's a necessity for businesses looking to stay
+                  competitive and relevant. Here are some key reasons to
+                  consider software development:
                 </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
+
+                <ol>
+                  <li>
+                    <p>
+                      <b>Custom Solutions :</b> Tailored software can be
+                      designed to meet your unique business needs, ensuring that
+                      you have the exact tools necessary for your success.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Efficiency and Productivity :</b> Well-designed
+                      software streamlines your operations, automates tasks, and
+                      eliminates manual processes, leading to increased
+                      efficiency and productivity.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Scalability :</b> As your business grows, custom
+                      software can easily adapt and scale to accommodate your
+                      expanding requirements.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Competitive Advantage :</b> Custom software can give
+                      your business a distinct advantage by providing unique
+                      features that set you apart from competitors.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Security and Data Control :</b> You have full control
+                      over your software, including security measures to protect
+                      sensitive data.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Cost Savings :</b> Over the long term, custom software
+                      can be more cost-effective than relying on off-the-shelf
+                      solutions that may require constant licensing fees.
+                    </p>
+                  </li>
+                </ol>
+                <h6>Our Expertise in Software Development</h6>
                 <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
+                  At SciPy Technologies, we are passionate about creating
+                  software that empowers businesses to thrive. Our team of
+                  experienced developers and engineers can assist you with:
                 </p>
+                <ol>
+                  <li>
+                    <p>
+                      <b>Custom Softawre Development :</b> We design and develop
+                      bespoke software solutions that match your precise
+                      requirements, whether it's a mobile app, a web
+                      application, or desktop software.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b> Mobile App Development : </b>In the age of
+                      smartphones, mobile apps are indispensable. We develop
+                      apps for both Android and iOS platforms that enhance your
+                      brand's reach and customer engagement.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Web Application Development :</b> We create interactive
+                      and responsive web applications using the latest
+                      technologies and frameworks to ensure optimal performance
+                      and user experience.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Database Management*:</b> We can design, optimize, and
+                      manage databases to support your software, ensuring data
+                      is secure, accessible, and reliable.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Software Integration :</b> We make sure that your
+                      software seamlessly integrates with your existing systems,
+                      preventing disruptions and enhancing workflow.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b> Software Maintenance and Support :</b> Our team is
+                      available for ongoing support and updates, ensuring your
+                      software stays up-to-date and trouble-free.
+                    </p>
+                  </li>
+                </ol>
+
                 <div class="lower-content-row">
                   <div class="lower-content-col">
                     <img
+                      style="border-radius: 20px"
                       class="lower-content-img"
-                      src="../assets/projects/project-2.jpg"
+                      src="https://i.pinimg.com/564x/b5/55/91/b55591273ef603f85380259fc01f17ee.jpg"
                       alt=""
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
+                    <h6>Get in Touch</h6>
                     <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
+                      Ready to harness the power of custom software for your
+                      business? Contact [Your IT Company] today to discuss your
+                      software development needs. We're committed to delivering
+                      innovative solutions that will drive your business
+                      forward, enhance efficiency, and unlock new opportunities.
+                      Your success is our success.
                     </p>
-                    <ul class="service-list-content">
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                    </ul>
                   </div>
                 </div>
               </div>
@@ -261,6 +351,9 @@
               <div class="widget-content">
                 <h6>Services List</h6>
                 <ul class="service-list-tab">
+                  <li><a href="./websitedev.html">Website Development</a></li>
+                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+                  <li><a href="./erppage.html">ERP Solutions</a></li>
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
                   <li>
@@ -425,9 +518,7 @@
               >
             </li>
             <li>
-              <a href="./erppage.html" data-page="Service1"
-                >ERP Solutions</a
-              >
+              <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
             <li>
               <a
@@ -442,7 +533,7 @@
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
-        
+
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
