--- a/pages/websitedev.html
+++ b/pages/websitedev.html
@@ -140,6 +140,7 @@
                 <div class="sidemenu-btn">
                   <span></span>
                   <span></span>
+                  <span></span>
                 </div>
               </div>
             </nav>
@@ -282,12 +283,12 @@
                   we're here to help you make informed decisions. <br />
                 </p>
                 <div class="lower-content-row">
-                  <div class="lower-content-col webdevimage2">
-                    <!-- <img
+                  <div class="lower-content-col webdevimage2" style="overflow: hidden; width: 370px; height: 360px;">
+                    <img style="overflow: hidden; border-radius: 20px; aspect-ratio: 1/1;"
                       class="lower-content-img"
                       src="../assets/projects/webdev_image.jpg"
                       alt=""
-                    /> -->
+                    />
                   </div>
                   <div class="lower-content-col">
                     <h6>Get In Touch</h6>
